Added some code for header / footer.

--- a/src/app/shared/layout/footer/footer.component.html
+++ b/src/app/shared/layout/footer/footer.component.html
@@ -1,1 +1,6 @@
-<p>footer works!</p>
+<footer>
+    <div class="container">
+        <a>X-Clone</a>
+        <p>Developed By: Charles Hall</p>
+    </div>
+</footer>
