--- a/src/app/shared/layout/nav-bar/nav-bar.component.html
+++ b/src/app/shared/layout/nav-bar/nav-bar.component.html
@@ -1,1 +1,14 @@
-<p>nav-bar works!</p>
+<nav>
+    <div class="container">
+        <a>X-Clone</a>
+        <div>
+            <a>Home</a>
+        </div>
+        <div>
+            <a>Profile</a>
+        </div>
+        <div>
+            <a>Settings</a>
+        </div>
+    </div>
+</nav>
