--- a/src/app/shared/layout/nav-bar/nav-bar.component.html
+++ b/src/app/shared/layout/nav-bar/nav-bar.component.html
@@ -1,14 +1,16 @@
 <nav>
     <div class="container">
         <a>X-Clone</a>
-        <div>
-            <a>Home</a>
-        </div>
-        <div>
-            <a>Profile</a>
-        </div>
-        <div>
-            <a>Settings</a>
-        </div>
+        <ul>
+            <li>
+                <a>Home</a>
+            </li>
+            <li>
+                <a class="nav-link" routerLink="/profile" routerLinkActive="active">Profile</a>
+            </li>
+            <li>
+                <a>Settings</a>
+            </li>
+        </ul>
     </div>
 </nav>
