Added settings component & routing.

--- a/src/app/shared/layout/nav-bar/nav-bar.component.html
+++ b/src/app/shared/layout/nav-bar/nav-bar.component.html
@@ -9,7 +9,7 @@
                 <a class="nav-link" routerLink="/profile" routerLinkActive="active">Profile</a>
             </li>
             <li>
-                <a>Settings</a>
+                <a class="nav-link" routerLink="/settings" routerLinkActive="active">Settings</a>
             </li>
         </ul>
     </div>
