Added post list.

--- a/src/app/features/post-list/post-list.component.html
+++ b/src/app/features/post-list/post-list.component.html
@@ -1,1 +1,5 @@
-<p>post-list works!</p>
+<div class="container">
+    <div *ngFor="let post of posts;">
+        <app-post></app-post>
+    </div>
+</div>
