Nav-bar using toolbar.

--- a/src/app/shared/layout/nav-bar/nav-bar.component.html
+++ b/src/app/shared/layout/nav-bar/nav-bar.component.html
@@ -1,14 +1,13 @@
-<nav>
-    <h2>X-Clone</h2>
-    <div class="icon-container">
-        <button mat-icon-button>
-            <mat-icon matBadge="{{notificationCount}}">home</mat-icon>
-        </button>
-        <button mat-icon-button>
-            <mat-icon>person</mat-icon>
-        </button>
-        <button mat-icon-button>
-            <mat-icon>settings</mat-icon>
-        </button>
-    </div>
-</nav>
+<mat-toolbar>
+    <span>XClone</span>
+    <span class="spacer"></span>
+    <button mat-icon-button>
+        <mat-icon matBadge="{{notificationCount}}">home</mat-icon>
+    </button>
+    <button mat-icon-button>
+        <mat-icon>person</mat-icon>
+    </button>
+    <button mat-icon-button>
+        <mat-icon>settings</mat-icon>
+    </button>
+</mat-toolbar>
