Added home & user sign up / login components. Added login / sign up button to nav bar.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-nav-bar></app-nav-bar>
 
-<app-post-list></app-post-list>
+<app-home></app-home>
 <router-outlet></router-outlet>
 
 <app-footer></app-footer>
