--- a/src/app/shared/layout/nav-bar/nav-bar.component.html
+++ b/src/app/shared/layout/nav-bar/nav-bar.component.html
@@ -1,6 +1,8 @@
 <mat-toolbar>
     <span>XClone</span>
     <span class="spacer"></span>
+    <!-- TODO: Conditional display of text depending on if user is signed in or not. -->
+    <a mat-button href="https://www.google.com/" target="_blank">Login / Sign Up</a>
     <button mat-icon-button>
         <mat-icon matBadge="{{notificationCount}}">home</mat-icon>
     </button>
