Added basic footer styling.

--- a/src/app/shared/layout/footer/footer.component.html
+++ b/src/app/shared/layout/footer/footer.component.html
@@ -1,6 +1,7 @@
-<footer>
-    <div class="container">
+<footer class="footer-container">
+    <mat-toolbar>
         <a>X-Clone</a>
+        <span class="spacer"></span>
         <p>Developed By: Charles Hall</p>
-    </div>
+    </mat-toolbar>
 </footer>
