Added copyright to footer.

--- a/src/app/shared/layout/footer/footer.component.html
+++ b/src/app/shared/layout/footer/footer.component.html
@@ -3,5 +3,7 @@
         <a>X-Clone</a>
         <span class="spacer"></span>
         <p>Developed By: Charles Hall</p>
+        <span class="spacer"></span>
+        <p>Copyright: Charles Hall Inc.</p>
     </mat-toolbar>
 </footer>
